@@ -65,7 +65,7 @@ inner-deploy: $(DEPLOY_JAR)
 $(DEPLOY_JAR): $(JAR_FILE)
 	@$(ECHO) "\n*** Deploying $(JAR_FILE) ... ***\n"
 	@$(MKDIRS) $(JBOSS_DEPLOY_DIR)
-	@$(CP) -f $(JAR_FILE) $(JBOSS_DEPLOY_DIR)
+	@$(CP) $(CP_FORCE_OPT) $(JAR_FILE) $(JBOSS_DEPLOY_DIR)
 
 #
 # Convienience for running the EJX deployment tool
